--- a/ContinuousRatio/contBib.bib
+++ b/ContinuousRatio/contBib.bib
@@ -1,1 +1,3 @@
-@ARTICLE{Butzen2019, author={N. {Butzen} and M. {Steyaert}}, journal={IEEE Journal of Solid-State Circuits}, title={Design of Single-Topology Continuously Scalable-Conversion-Ratio Switched- Capacitor DC–DC Converters}, year={2019}, volume={54}, number={4}, pages={1039-1047},}
+@ARTICLE{Butzen2019, author={N. {Butzen} and M. {Steyaert}}, journal={IEEE J. of Solid-State Circuits}, title={Design of Single-Topology Continuously Scalable-Conversion-Ratio Switched-Capacitor {DC-DC} Converters}, year={2019}, volume={54}, number={4}, pages={1039-1047},}
+
+@INPROCEEDINGS{Le2010,  author={H. {Le} and M. {Seeman} and S. R. {Sanders} and V. {Sathe} and S. {Naffziger} and E. {Alon}},  booktitle={2010 IEEE Int. Solid-State Circuits Conf. - (ISSCC)},   title={A 32nm fully integrated reconfigurable switched-capacitor {DC-DC} converter delivering 0.55{W}/mm{$^2$} at 81{\%} efficiency},   year={2010},  volume={},  number={},  pages={210-211},}
