Updated leakage model with new writing

--- a/LeakageModel/LeakageModel.tex
+++ b/LeakageModel/LeakageModel.tex
@@ -140,6 +140,10 @@
 		\caption{Four terminal device model incorporating switch resistance.}
 		\label{Fig:Circ_Res}
 	\end{figure}
+
+	This can then be verified using an ideal model of the circuit, using both a single SC cell, and in more complex configurations, such as the Dickson and series parallel. The resulting comparison can be seen in Fig. \ref{}, where the resistance and voltage are held constant, and the frequency is varied.
+	
+	A second set of tests was run to verify that the impact of $\alpha_B$ and $\alpha_T$ was as predicted, which can be seen in Fig. \ref{}.
 	
 	\subsection{Leakage Effects}
 	The leakage effects associated with the transistors are modelled using theory from the \cite{} transistor models. The testing is performed in pspice, using the PTM to simulate the transistors used. 
