Updated with new continuous ratio changes

--- a/ContinuousRatio/contBib.bib
+++ b/ContinuousRatio/contBib.bib
@@ -1,3 +1,30 @@
 @ARTICLE{Butzen2019, author={N. {Butzen} and M. {Steyaert}}, journal={IEEE J. of Solid-State Circuits}, title={Design of Single-Topology Continuously Scalable-Conversion-Ratio Switched-Capacitor {DC-DC} Converters}, year={2019}, volume={54}, number={4}, pages={1039-1047},}
 
 @INPROCEEDINGS{Le2010,  author={H. {Le} and M. {Seeman} and S. R. {Sanders} and V. {Sathe} and S. {Naffziger} and E. {Alon}},  booktitle={2010 IEEE Int. Solid-State Circuits Conf. - (ISSCC)},   title={A 32nm fully integrated reconfigurable switched-capacitor {DC-DC} converter delivering 0.55{W}/mm{$^2$} at 81{\%} efficiency},   year={2010},  volume={},  number={},  pages={210-211},}
+
+@ARTICLE{Tanzawa2011,
+	author={T. {Tanzawa}},
+	journal={IEEE Transactions on Circuits and Systems II: Express Briefs}, 
+	title={A Switch-Resistance-Aware Dickson Charge Pump Model for Optimizing Clock Frequency}, 
+	year={2011},
+	volume={58},
+	number={6},
+	pages={336-340},}
+
+@INPROCEEDINGS{Svensson1994,
+	author={L. J. {Svensson} and J. G. {Koller}},
+	booktitle={Proceedings of 1994 IEEE Symposium on Low Power Electronics}, 
+	title={Driving a capacitive load without dissipating fCV/sup 2/}, 
+	year={1994},
+	volume={},
+	number={},
+	pages={100-101},}
+
+@ARTICLE{Butzen2016,
+	author={N. {Butzen} and M. S. J. {Steyaert}},
+	journal={IEEE Journal of Solid-State Circuits}, 
+	title={Scalable Parasitic Charge Redistribution: Design of High-Efficiency Fully Integrated Switched-Capacitor DC–DC Converters}, 
+	year={2016},
+	volume={51},
+	number={12},
+	pages={2843-2853},}
