Added updates based on reviewer commments

--- a/ContinuousRatio/contRatio_V2.tex
+++ b/ContinuousRatio/contRatio_V2.tex
@@ -305,7 +305,7 @@
  	\begin{figure}
  		\centering
  		\includegraphics[width=\linewidth]{Figures/eta_A.pdf}
- 		\caption{Comparison using $V_{IN} = 2.5$ and $V_{OUT} = 1$.}
+ 		\caption{Comparison between calculated and simulated data for various values of A and $V_{IN}$.}
  		\label{fig:Comp_A}
  	\end{figure}
  	\subsection{Incorporating Transistor Switching Losses}
